Added changelog to help section

--- a/index.html
+++ b/index.html
@@ -1049,6 +1049,10 @@
                 </ul>
               </ol>
             </div>
+            <div class="card">
+              <h3 class="cart-title">Newsletter Generator Changelog</h3>
+              <p>To view the changelog for the Newsletter Generator click on the link below:<br>
+                <a href="https://github.com/bimmr/Newsletter-Generator/commits">https://github.com/bimmr/Newsletter-Generator/commits</a><p>
           </div>
         </div>
       </main>
