--- a/index.html
+++ b/index.html
@@ -16,14 +16,21 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
-    <link href="https://cdn.quilljs.com/1.3.7/quill.bubble.css" rel="stylesheet">
-    <link href="https://cdn.quilljs.com/1.3.7/quill.snow.css" rel="stylesheet">
     <link rel="stylesheet" href="css\snotify-material.css">
 
-    <script src="https://cdn.quilljs.com/1.3.7/quill.js"></script>
+    <!-- Main Quill library -->
+    <script src="https://cdn.quilljs.com/1.3.7/quill.min.js"></script>
+
+    <!-- Theme included stylesheets -->
+    <link href="https://cdn.quilljs.com/1.3.7/quill.core.css" rel="stylesheet">
+    <link href="https://cdn.quilljs.com/1.3.7/quill.bubble.css" rel="stylesheet">
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-    <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script>
+    <!-- <script src="https://unpkg.com/jspdf@latest/dist/jspdf.min.js"></script> -->
 
     <script src="js\snotify.min.js"></script>
 
@@ -874,14 +881,14 @@
               <button @click="resetStyles()" style="margin: 0"><i class="fas fa-remove-format"></i> Reset Styles</button>
             </div>
           </div>
-          <div class="card">
+          <!-- <div class="card">
             <h3 class="card-title">Turn On Editing in HTML</h3>
             <p><small>This allows the use of custom HTML when editing posts and will remove the WYSIWYG(What You See Is What You Get) toolbar</small></p>
             <div class="form-item">
               <input type="checkbox" v-model="editHTML" id="editHTMLToggle">
               <label for="editHTMLToggle">Enable Editing in HTML</label>
             </div>
-          </div>
+          </div> -->
           <div class="card">
               <h3 class="card-title">Enable MS Word Support</h3>
               <p><small><strong>This can cause issues if enabled and is being used in an email.
