--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
         </div>
         <div class="preview-body">
           <div ref="newsletterwrapper" id="newsletterwrapper">
-            <table ref="newsletter" id="newsletter" align="center" class="no-borders" style="width: 100%; border-collapse: collapse; box-sizing: border-box; overflow-wrap: break-word;" :style="{'background-color': styles.backgroundColor}">
+            <table ref="newsletter" id="newsletter" width="800"  align="center" class="no-borders" style="border-collapse: collapse; box-sizing: border-box; overflow-wrap: break-word;" :style="{'background-color': styles.backgroundColor}">
               <tr>
                 <td style="padding:0;">
                   <span id="previewText"><p v-html="newsletter.previewText" style="font-size: 1pt;text-align:center;" :style="{color: styles.backgroundColor}"></p></span>
-                  <table id="newsletter-content" align="center"  class="no-borders" style="width:800px; margin: 0 auto; border-collapse: seperate; border-spacing: 0 4px; box-sizing: border-box;" :cellspacing="styles.post.spacing" :style="{'border-spacing': '0 '+styles.post.spacing+'px'}">
+                  <table id="newsletter-content" align="center" width="800" class="no-borders" style=" margin: 0 auto; border-collapse: seperate; border-spacing: 0 4px; box-sizing: border-box;" :cellspacing="styles.post.spacing" :style="{'border-spacing': '0 '+styles.post.spacing+'px'}">
 
                     <!-- HEADER -->
                     <tr v-if="settings.header.style == '1'" id="newsletter-header">
                       <td colspan="2">
-                        <img :src="settings.header.image" width="100%">
+                        <img :src="settings.header.image" width="800">
                       </td>
                     </tr>
                     <tr v-if="settings.header.style == '2'" style="text-align: center;" :style="{'background-color': styles.header.backgroundColor}">
@@ -117,7 +117,7 @@
                     <!-- CONTENT -->
                     <tr v-for="(post, pos) in posts">
                       <td style="padding:0;" class="newsletter-body">
-                        <table valign="top" class="no-borders" style="width: 100%; align-items: left; display: inline-block;border-collapse: separate;" border="0" cellspacing="0" cellpadding="20"
+                        <table valign="top" class="no-borders" width="800" style="align-items: left; display: inline-block;border-collapse: separate;" border="0" cellspacing="0" cellpadding="20"
                         :style="{
                           'background-color': getPostStyle(pos, 'backgroundColor'),
                           'border-radius': getPostStyle(pos, 'borderRadius')+'px'
@@ -126,11 +126,11 @@
 
                           <tr>
                             <!-- If image in post -->
-                            <td v-if="post.img" valign="top" style="display:inline-block;width:200px;padding: 10px 10px 10px 10px;">
+                            <td v-if="post.img" width="200" valign="top" style="display:inline-block;padding: 10px 10px 10px 10px;">
                                 <!-- <div style="background-position: center center; background-repeat: no-repeat; background-size: contain; height: 200px; width: 100%" height="200px" width="100%"  :style="{'background-image': 'url('+post.img+')'}"> -->
                                 <img :src="post.img" height="auto" width="200">
                             </td>
-                            <td v-if="post.img" style="display:inline-block;padding:10px 10px 20px 10px;width:560px;font-family: 'Muli', Helvetica, sans-serif;">
+                            <td v-if="post.img" width="560" style="display:inline-block;padding:10px 10px 20px 10px;font-family: 'Muli', Helvetica, sans-serif;">
                               <span style="margin-bottom:0;" v-html="post.title" :style="{'color': getPostStyle(pos, 'textColor')}"></span>
                               <span v-if="post.date != '<p><br></p>'" style="font-size: .75em;opacity: .75;" :style="{'color': getPostStyle(pos, 'textColor')}" v-html="post.date"></span>
                               <span :style="{'color': getPostStyle(pos, 'textColor')}" v-html="post.desc"></span>
@@ -154,7 +154,7 @@
                             </td>
 
                             <!-- If no image in post -->
-                            <td v-else style="display:inline-block;padding:10px 10px 20px 10px;width:780px;font-family: 'Muli', Helvetica, sans-serif;" colspan="2">
+                            <td v-else width="800" style="display:inline-block;padding:10px 10px 20px 10px;font-family: 'Muli', Helvetica, sans-serif;" colspan="2">
                               <span style="margin-bottom:0;" :style="getPostStyle(pos, 'textColor')" v-html="post.title"></span>
                               <span v-if="post.date != '<p><br></p>'" style="font-size: .75em; opacity:.75;" :style="{'color': getPostStyle(pos, 'textColor')}" v-html="post.date"></span>
                               <span :style="{'color': getPostStyle(pos, 'textColor')}" v-html="post.desc"></span>
@@ -182,8 +182,8 @@
 
                     <!-- FOOTER -->
 
-                    <tr v-if="settings.footer.style == '1'" :style="{'background-color': styles.footer.backgroundColor}">
-                      <td colspan="2" valign="middle" style="padding: 20px;font-family: 'Muli', Helvetica, sans-serif;">
+                    <tr v-if="settings.footer.style == '1'">
+                      <td :style="{'background-color': styles.footer.backgroundColor}" valign="middle"  style="padding: 20px;font-family: 'Muli', Helvetica, sans-serif;">
                         <p v-if="settings.footer.preset.website || settings.footer.preset.social.facebook || settings.footer.preset.social.linkedin || settings.footer.preset.social.twitter" style="margin:0;margin-bottom: 10px;text-align:center;color:#fff;">
                           <a v-if="settings.footer.preset.website" :href="settings.footer.preset.website" target="_blank" :style="{color: styles.footer.linkColor}">Website</a>
                           <span v-if="settings.footer.preset.social.facebook"><span v-if="settings.footer.preset.website"> | </span><a :href="settings.footer.preset.social.facebook" target="_blank" :style="{color: styles.footer.linkColor}">Facebook</a></span>
@@ -209,15 +209,17 @@
                           <p v-if="settings.footer.preset.email" style="margin: 0;font-size:12px; text-align: center;"><a :href="'mailto:' + settings.footer.preset.email + '?subject=Unsubscribe from newsletters'":style="{color: styles.footer.linkColor}">Unsubscribe from newsletters</a></p>
                       </td>
                     </tr>
-                    <tr v-else-if="settings.footer.style == '2'" :style="{'background-color': styles.footer.backgroundColor}">
-                      <td colspan="2" valign="middle" style="padding: 20px;font-family: 'Muli', Helvetica, sans-serif;">
+                    <tr v-else-if="settings.footer.style == '2'">
+                      <td :style="{'background-color': styles.footer.backgroundColor}" valign="middle" style="padding: 20px;font-family: 'Muli', Helvetica, sans-serif;">
                          <span v-html="settings.footer.html" :style="{color: styles.footer.textColor}"></span>
                       </td>
                     </tr>
 
                     <!-- ANALYTICS -->
                     <tr v-if="analyticsEnabled">
-                      <td colspan="2"><img :src="'https://www.google-analytics.com/collect?v=1&tid'+settings.analytics.code+'&cid=555&t=event&ec=Email+Newsletter&ea=open&el='+settings.analytics.name"/></td>
+                      <td>
+                        <img width="1" height="1" :src="'https://www.google-analytics.com/collect?v=1&tid'+settings.analytics.code+'&cid=555&t=event&ec=Email+Newsletter&ea=open&el='+settings.analytics.name"/>
+                      </td>
                     </tr>
                   </table>
                 </td>
