Added Links, removed Advanced Lists

--- a/index.html
+++ b/index.html
@@ -949,7 +949,8 @@
                                 <input type="button" value="Download Custom Banner" @click="downloadCustomBanner">
                             </div>
                             <p style="font-size: .75em; padding-left: 10px;">Upload the banner to your website's uploads
-                                <br>library and copy the link to use it</p>
+                                <br>library and copy the link to use it
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -1046,7 +1047,8 @@
                             <ul style="list-style-type: square">
                                 <li><strong>No Footer</strong> will make it so no footer appears</li>
                                 <li><strong>Use Template</strong> allows you to use a premade footer template
-                                    <small>(This will include the required disclaimers)</small></li>
+                                    <small>(This will include the required disclaimers)</small>
+                                </li>
                                 <li><strong>Custom Footer</strong> allows you to design your own footer</li>
                             </ul>
                         </li>
@@ -1073,11 +1075,14 @@
                                 <li style="list-style: none;">
                                     <ul style="list-style-type: square">
                                         <li><strong>Title</strong> will change the title of the post
-                                            <small>(Supports HTML)</small></li>
+                                            <small>(Supports HTML)</small>
+                                        </li>
                                         <li><strong>Description</strong> will change the description of the post
-                                            <small>(Supports HTML)</small></li>
+                                            <small>(Supports HTML)</small>
+                                        </li>
                                         <li><strong>Date</strong> will change the subtext under the post's title
-                                            <small>(Supports HTML)</small></li>
+                                            <small>(Supports HTML)</small>
+                                        </li>
                                         <li><strong>Link</strong> will change where the "Read More" button directs to
                                         </li>
                                         <li><strong>Read More</strong> will change where the "Read More" button text
